Reader text-container scrollbar position fix

--- a/UJCSystem/ITJakub.Web.Hub/Content/Plugins/Reader/ITJakub.Reader.less
+++ b/UJCSystem/ITJakub.Web.Hub/Content/Plugins/Reader/ITJakub.Reader.less
@@ -54,11 +54,9 @@ html,body {
     color: white;
 }
 
-
 .reader-controls .tooltip-arrow {
     border-top-color: @item-background-color !important;
 }
-
 
 .title {
     font-size: 24px;
@@ -204,12 +202,6 @@ html,body {
     height:100vh;
 }
 
-/*.reader-head{
-    height: 140px;
-}*/
-
-
-
 .reader .fullscreen-close-button {
     display: none;
 }
@@ -264,9 +256,9 @@ html,body {
 
 .reader-right-panel-body {    
     background-color : white;
-    /*overflow-y : auto;*/
     width: 100%;
     height : calc(100% - 5px);
+    padding-top: 5px;
 }
 
 .fullscreen .reader-right-panel, .fullscreen .reader-left-panel {
